--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,90 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "bomberos-backend",
+  "version": "2.0.0",
+  "description": "Sistema de gestión de bomberos con Clean Architecture",
   "type": "module",
+  "main": "api/cmd/main.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node api/cmd/main.js",
+    "dev": "nodemon api/cmd/main.js --watch . --ext js",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "jest tests/unit --testPathPattern=unit",
+    "test:integration": "jest tests/integration --testPathPattern=integration",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write .",
+    "validate": "npm run lint && npm run test",
+    "migration:check": "node scripts/check-migration.js",
+    "db:migrate": "node internal/platform/database/migrations/run-migrations.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "keywords": [
+    "bomberos",
+    "clean-architecture",
+    "hexagonal-architecture",
+    "node.js",
+    "express",
+    "mysql"
+  ],
+  "author": "BomberOS Team",
+  "license": "MIT",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mysql2": "^3.14.1"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^29.0.0",
+    "nodemon": "^3.0.0",
+    "prettier": "^3.0.0"
+  },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=8.0.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "testMatch": [
+      "**/tests/**/*.test.js"
+    ],
+    "collectCoverageFrom": [
+      "internal/**/*.js",
+      "domain/**/*.js",
+      "bomberos/**/*.js",
+      "!**/node_modules/**",
+      "!**/tests/**"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 70,
+        "functions": 80,
+        "lines": 80,
+        "statements": 80
+      }
+    }
+  },
+  "eslintConfig": {
+    "env": {
+      "node": true,
+      "es2022": true,
+      "jest": true
+    },
+    "extends": [
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "ecmaVersion": 2022,
+      "sourceType": "module"
+    },
+    "rules": {
+      "no-console": "warn",
+      "prefer-const": "error",
+      "no-var": "error"
+    }
   }
 }
