--- a/backend/package.json
+++ b/backend/package.json
@@ -34,7 +34,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "twilio": "^5.7.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.0.0",
