--- a/package.json
+++ b/package.json
@@ -4,26 +4,20 @@
   "description": "Sistema de Gestión de Bomberos - Proyecto Final con Arquitectura Hexagonal",
   "type": "module",
   "scripts": {
-  "start": "npm run dev",
-  "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
-
-  "dev:backend": "cd backend && npm start",
-  "dev:frontend": "cd frontend && npm run dev",
-
-  "stop": "echo 🛑 Para detener los servicios, presioná Ctrl + C",
-
-  "install:all": "npm run install:backend && npm run install:frontend",
-  "install:backend": "cd backend && npm install",
-  "install:frontend": "cd frontend && npm install",
-
-  "test:api": "curl http://localhost:3000/health",
-  "test:frontend": "curl http://localhost:5173 > nul && echo ✅ Frontend OK || echo ❌ Frontend no disponible",
-  "test:all": "npm run test:api && npm run test:frontend",
-
-  "logs:backend": "npm run dev:backend",
-  "logs:frontend": "npm run dev:frontend"
-},
-
+    "start": "npm run dev",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "cd backend && npm start",
+    "dev:frontend": "cd frontend && npm run dev",
+    "stop": "echo 🛑 Para detener los servicios, presioná Ctrl + C",
+    "install:all": "npm run install:backend && npm run install:frontend",
+    "install:backend": "cd backend && npm install",
+    "install:frontend": "cd frontend && npm install",
+    "test:api": "curl http://localhost:3000/health",
+    "test:frontend": "curl http://localhost:5173 > nul && echo ✅ Frontend OK || echo ❌ Frontend no disponible",
+    "test:all": "npm run test:api && npm run test:frontend",
+    "logs:backend": "npm run dev:backend",
+    "logs:frontend": "npm run dev:frontend"
+  },
   "keywords": [
     "bomberos",
     "hexagonal-architecture",
@@ -39,5 +33,8 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "bcrypt": "^6.0.0"
   }
 }
