--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
-    "bcrypt": "^6.0.0"
+    "bcrypt": "^6.0.0",
+    "nodemailer": "^7.0.5"
   }
 }
