avances front diagramacion guardias

--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "concurrently": "^8.2.2"
   },
   "dependencies": {
+    "@fullcalendar/core": "^6.1.18",
+    "@fullcalendar/daygrid": "^6.1.18",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
+    "@fullcalendar/timegrid": "^6.1.18",
     "bcrypt": "^6.0.0"
   }
 }
