--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "mysql2": "^3.14.2",
+    "nodemailer": "^7.0.5",
     "twilio": "^5.7.3"
   },
   "devDependencies": {
