--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "cros": "^1.1.0",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.2",
     "nodemailer": "^7.0.5",
     "twilio": "^5.7.3"
