--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node api/cmd/main.js",
     "dev": "nodemon api/cmd/main.js --watch . --ext js",
+    "build": "echo 'No build step required'",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "jest tests/unit --testPathPattern=unit",
     "test:integration": "jest tests/integration --testPathPattern=integration",
@@ -17,7 +18,11 @@
     "format": "prettier --write .",
     "validate": "npm run lint && npm run test",
     "migration:check": "node scripts/check-migration.js",
-    "db:migrate": "node internal/platform/database/migrations/run-migrations.js"
+    "db:migrate": "node internal/platform/database/migrations/run-migrations.js",
+    "test:twilio": "node test-twilio-simple.js",
+    "test:webhook": "node test-webhook.js",
+    "simulate:twilio": "node simulate-twilio.js",
+    "test:all-twilio": "node test-all-twilio.js"
   },
   "keywords": [
     "bomberos",
@@ -35,6 +40,7 @@
     "cros": "^1.1.0",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.2",
     "nodemailer": "^7.0.5",
     "twilio": "^5.7.3"
@@ -49,6 +55,26 @@
   "engines": {
     "node": ">=18.0.0",
     "npm": ">=8.0.0"
+  },
+  "scripts": {
+    "start": "node api/cmd/main.js",
+    "dev": "nodemon api/cmd/main.js --watch . --ext js",
+    "build": "echo 'No build step required'",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "jest tests/unit --testPathPattern=unit",
+    "test:integration": "jest tests/integration --testPathPattern=integration",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "lint": "eslint . --ext .js",
+    "lint:fix": "eslint . --ext .js --fix",
+    "format": "prettier --write .",
+    "validate": "npm run lint && npm run test",
+    "migration:check": "node scripts/check-migration.js",
+    "db:migrate": "node internal/platform/database/migrations/run-migrations.js",
+    "test:twilio": "node test-twilio-simple.js",
+    "test:webhook": "node test-webhook.js",
+    "simulate:twilio": "node simulate-twilio.js",
+    "test:all-twilio": "node test-all-twilio.js"
   },
   "jest": {
     "testEnvironment": "node",
