--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port 4173 --host 0.0.0.0"
   },
   "dependencies": {
     "@fullcalendar/bootstrap5": "^6.1.19",
@@ -21,6 +22,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.8.0",
     "react-tsparticles": "^2.12.2",
     "tsparticles-slim": "^2.12.0"
   },
