--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "nodemailer": "^7.0.5",
-    "react-select": "^5.10.2"
+    "react-select": "^5.10.2",
+    "sweetalert2": "^11.24.1"
   }
 }
