--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "vite preview --port 4173 --host 0.0.0.0"
   },
   "dependencies": {
     "@fullcalendar/bootstrap5": "^6.1.19",
@@ -16,12 +17,15 @@
     "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
+    "@sweetalert2/theme-bootstrap-4": "^5.0.27",
     "bootstrap": "^5.3.6",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
+    "react-select": "^5.8.0",
     "react-tsparticles": "^2.12.2",
+    "sweetalert2": "^11.24.1",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
