--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "@fullcalendar/react": "^6.1.19",
     "@fullcalendar/timegrid": "^6.1.19",
     "@sweetalert2/theme-bootstrap-4": "^5.0.27",
+    "apexcharts": "^5.3.5",
     "bootstrap": "^5.3.6",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
+    "react-apexcharts": "^1.8.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "react-select": "^5.8.0",
