--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,8 @@
     "@sweetalert2/theme-bootstrap-4": "^5.0.27",
     "apexcharts": "^5.3.5",
     "bootstrap": "^5.3.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.8.0",
