--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "bootstrap": "^5.3.6",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "react": "^19.0.0",
     "react-apexcharts": "^1.8.0",
