--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "nodemailer": "^7.0.5",
     "react-select": "^5.10.2",
-    "sweetalert2": "^11.24.1"
+    "sweetalert2": "^11.26.2"
   }
 }
